--- a/profiles/XIAOMI/MI-R4AG_SPI/.config
+++ b/profiles/XIAOMI/MI-R4AG_SPI/.config
@@ -63,19 +63,20 @@ DEFAULT_DDR3_2048M=y
 DDR_CHIP=DEFAULT_DDR3_2048M
 # UBOOT_RAM is not set
 UBOOT_ROM=y
-USB_RECOVERY_SUPPORT=y
+# USB_RECOVERY_SUPPORT is not set
 LAN_WAN_PARTITION=y
 # RALINK_DEMO_BOARD_PVLAN is not set
 RALINK_EV_BOARD_PVLAN=y
-# EPHY_LINK_UP is not set
+EPHY_LINK_UP=y
 TEXT_BASE=0xBFC00000
-GPIO_BTN_RESET=7
-GPIO_BTN_WPS=18
+HTTPD_SUPPORT=y
+GPIO_BTN_RESET=18
+GPIO_BTN_WPS=-1
 GPIO_BTN_WLTOG=-1
-GPIO_BTN_ROUTER=6
+GPIO_BTN_ROUTER=-1
 # GPIO_LED_INVERTED is not set
 GPIO_LED_ALL=-1
-GPIO_LED_INIT1=29
+GPIO_LED_INIT1=-1
 GPIO_LED_INIT2=-1
 GPIO_LED_INIT3=-1
 GPIO_LED_INIT4=-1
@@ -83,11 +84,11 @@ GPIO_LED_INIT5=-1
 GPIO_LED_INIT6=-1
 GPIO_LED_INIT7=-1
 GPIO_LED_INIT8=-1
-GPIO_LED_ALERT1=29
+GPIO_LED_ALERT1=-1
 GPIO_LED_ALERT2=-1
 GPIO_LED_ALERT3=-1
 GPIO_LED_ALERT4=-1
-GPIO_LED_POWER=30
+GPIO_LED_POWER=10
 GPIO_USB_POWER=-1
 GPIO_USB_POWER2=-1
 GPIO_RST_INIC=-1
