HTTPD support needs looking at

--- a/profiles/XIAOMI/MI-R4AG_SPI/.config
+++ b/profiles/XIAOMI/MI-R4AG_SPI/.config
@@ -28,7 +28,6 @@ GPIOx_RESET_MODE=y
 # ON_BOARD_NAND_FLASH_COMPONENT is not set
 ON_BOARD_SPI_FLASH_COMPONENT=y
 SPI_FAST_CLOCK=y
-ON_BOARD_16M_FLASH_COMPONENT=y
 # MT7621_CPU_900MHZ is not set
 MT7621_CPU_880MHZ=y
 # MT7621_CPU_875MHZ is not set
@@ -70,7 +69,7 @@ LAN_WAN_PARTITION=y
 RALINK_EV_BOARD_PVLAN=y
 EPHY_LINK_UP=y
 TEXT_BASE=0xBFC00000
-HTTPD_SUPPORT=y
+# HTTPD_SUPPORT is not set
 GPIO_BTN_RESET=18
 GPIO_BTN_WPS=-1
 GPIO_BTN_WLTOG=-1
