Turn off spi fast speed

--- a/profiles/XIAOMI/MI-R4AG_SPI/.config
+++ b/profiles/XIAOMI/MI-R4AG_SPI/.config
@@ -27,7 +27,7 @@ MAC_TO_MT7530_MODE=y
 GPIOx_RESET_MODE=y
 # ON_BOARD_NAND_FLASH_COMPONENT is not set
 ON_BOARD_SPI_FLASH_COMPONENT=y
-SPI_FAST_CLOCK=y
+# SPI_FAST_CLOCK is not set
 # MT7621_CPU_900MHZ is not set
 MT7621_CPU_880MHZ=y
 # MT7621_CPU_875MHZ is not set
