Enable Dual image support for MT7621

--- a/uboot-5.x.x.x/config.in
+++ b/uboot-5.x.x.x/config.in
@@ -1539,7 +1539,7 @@ fi
 
 #bool "Tiny Uboot" CONFIG_TINY_UBOOT
 
-#bool "Dual Image" DUAL_IMAGE_SUPPORT
+bool "Dual Image" DUAL_IMAGE_SUPPORT
 
 bool "USB Recovery" USB_RECOVERY_SUPPORT
 
