--- a/profiles/XIAOMI/MI-R4AG_SPI/.config
+++ b/profiles/XIAOMI/MI-R4AG_SPI/.config
@@ -28,6 +28,9 @@ GPIOx_RESET_MODE=y
 # ON_BOARD_NAND_FLASH_COMPONENT is not set
 ON_BOARD_SPI_FLASH_COMPONENT=y
 # SPI_FAST_CLOCK is not set
+# ON_BOARD_4M_FLASH_COMPONENT is not set
+# ON_BOARD_8M_FLASH_COMPONENT is not set
+ON_BOARD_16M_FLASH_COMPONENT=y
 # MT7621_CPU_900MHZ is not set
 MT7621_CPU_880MHZ=y
 # MT7621_CPU_875MHZ is not set
@@ -63,6 +66,7 @@ DEFAULT_DDR3_2048M=y
 DDR_CHIP=DEFAULT_DDR3_2048M
 # UBOOT_RAM is not set
 UBOOT_ROM=y
+DUAL_IMAGE_SUPPORT=y
 # USB_RECOVERY_SUPPORT is not set
 LAN_WAN_PARTITION=y
 # RALINK_DEMO_BOARD_PVLAN is not set
