--- a/uboot-5.x.x.x/drivers/Makefile
+++ b/uboot-5.x.x.x/drivers/Makefile
@@ -27,7 +27,7 @@ include $(TOPDIR)/config.mk
 
 LIB	= libdrivers.a
 
-OBJS	= rt2880_eth.o gpio.o
+OBJS	= rt2880_eth.o gpio.o netconsole.o
 
 ifeq ($(RALINK_MDIO_ACCESS_FUN),ON)
 OBJS	+= mii_mgr.o
