Fix httpd support

--- a/profiles/XIAOMI/MI-R4AG_SPI/.config
+++ b/profiles/XIAOMI/MI-R4AG_SPI/.config
@@ -70,7 +70,7 @@ LAN_WAN_PARTITION=y
 RALINK_EV_BOARD_PVLAN=y
 EPHY_LINK_UP=y
 TEXT_BASE=0xBFC00000
-# HTTPD_SUPPORT is not set
+HTTPD_SUPPORT=y
 GPIO_BTN_RESET=18
 GPIO_BTN_WPS=-1
 GPIO_BTN_WLTOG=-1
