Add netconsole custom command and serial startup

--- a/uboot-5.x.x.x/common/Makefile
+++ b/uboot-5.x.x.x/common/Makefile
@@ -29,11 +29,11 @@ AOBJS	=
 
 ifeq ($(RALINK_CMDLINE),ON)
 COBJS	= main.o cmd_bdinfo.o cmd_boot.o cmd_bootm.o cmd_console.o \
-	cmd_load.o cmd_misc.o cmd_net.o cmd_mem.o \
+	cmd_load.o cmd_misc.o cmd_net.o cmd_mem.o cmd_custom.o \
 	cmd_nvedit.o command.o console.o devices.o dlmalloc.o \
 	env_common.o exports.o lists.o cmd_tftpServer.o
 else
-COBJS = console.o devices.o dlmalloc.o \
+COBJS = console.o devices.o dlmalloc.o cmd_custom.o \
 	env_common.o exports.o lists.o cmd_nvedit.o cmd_bootm.o cmd_net.o
 endif
 
