Rename config from hidden Change Xiaomi to have all read modes - fast read, dual read and quad read as default

--- a/profiles/XIAOMI/MI-R4AG_SPI/config
+++ b/profiles/XIAOMI/MI-R4AG_SPI/config
@@ -27,9 +27,10 @@ MAC_TO_MT7530_MODE=y
 GPIOx_RESET_MODE=y
 # ON_BOARD_NAND_FLASH_COMPONENT is not set
 ON_BOARD_SPI_FLASH_COMPONENT=y
-# SPI_FAST_CLOCK is not set
+SPI_FAST_CLOCK=y
 SPI_FLASH_READ_FAST=y
-# SPI_FLASH_READ_QOR is not set
+SPI_FLASH_READ_DOR=y
+SPI_FLASH_READ_QOR=y
 # MT7621_CPU_900MHZ is not set
 MT7621_CPU_880MHZ=y
 # MT7621_CPU_875MHZ is not set
