--- a/profiles/XIAOMI/MI-R4A.config
+++ b/profiles/XIAOMI/MI-R4A.config
@@ -47,6 +47,8 @@ SPI_FLASH_FACTORY_OFFSET_10000=y
 SPI_FLASH_OTHERS_130000=y
 # SPI_FLASH_OTHERS_140000 is not set
 # SPI_FLASH_OTHERS_150000 is not set
+SPI_FLASH_OTHERS_OFFSET_BEFORE_FIRMWARE=y
+# SPI_FLASH_OTHERS_OFFSET_AFTER_FIRMWARE is not set
 # MT7621_CPU_900MHZ is not set
 MT7621_CPU_880MHZ=y
 # MT7621_CPU_875MHZ is not set
