--- a/uboot-5.x.x.x/Makefile
+++ b/uboot-5.x.x.x/Makefile
@@ -1816,7 +1816,7 @@ clean:
 	rm -f board/cray/L1/bootscript.c board/cray/L1/bootscript.image
 	rm -f board/trab/trab_fkt
 	rm -f stage1/stage2.bin stage1/stage1n2.elf stage1/stage1n2.map
-	rm -f ./uboot.bin ./uboot.img ./u-boot ./u-boot.* ./uboot_a.bin ./System.map
+	rm -f ./uboot.bin ./uboot.img ./u-boot ./u-boot.* ./uboot_a.bin ./System.map ./autoconf.h
 	rm -f scripts/lxdialog/lxdialog
 
 clobber:	clean
